--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,4 +1,4 @@
- <div class="container">
+ <div class="container-fluid">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card border-0 shadow rounded-3 my-5">
