before ajax styling

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -113,7 +113,7 @@
                       <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
                     </div> --}}
                      <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                      <button class="btn btn-danger" onclick="delProduct('{{this.productId}}')">del</button>
+                      <button class="btn btn-danger" onclick="delProduct('{{this.productId}}')">remove</button>
                       
                     </div>
                      <div class="col-md-6 col-lg-6 col-xl-6 text-end">
