--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -29,11 +29,11 @@
               <hr class="my-4">
                              <a class="ml-auto" style="color: red" href="/users/forgot">forgot password</a>
 
-              <div class="d-grid mb-2 mt-3">
+              {{!-- <div class="d-grid mb-2 mt-3">
                 <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">
                   <i class="fab fa-google me-2"></i> Sign in with Google
                 </button>
-              </div>
+              </div> --}}
               
             </form>
           </div>
