--- a/views/user/userhome.hbs
+++ b/views/user/userhome.hbs
@@ -239,7 +239,7 @@
             </div>
             <div class="col-lg-8 col-md-8" >
                 <ul class="filter__controls" >
-                    <li class="active" data-filter="*">All</li>
+                    <li class="active" data-filter="*"> <a style="color:black ;" href="/users">All</a> </li>
                     {{#each brands}}
                 <button style="background: #1c153f; color: white; border-radius: 13px; width: 55px;border: none;font-weight: 500;" onclick="getAll('{{this.name}}')">{{this.name}}</button>
 
