--- a/views/user/orderSuccessfull.hbs
+++ b/views/user/orderSuccessfull.hbs
@@ -112,7 +112,7 @@ For what reason would it be advisable for me to think about business content? Th
                                 <tr>
                                     <td><img style="width: 75px; " src="/uploads/{{this.image}}" alt="image"></td>
                                      <td width="75%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
-                                     <h5>purchase Item: <strong>{{this.name}}</strong> </h5> 
+                                     <h5>Purchase Item: <strong>{{this.name}}</strong> </h5> 
                                     </td>
                                     <td width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
                                    <h4> {{this.quantity}} x{{this.price}}</h4> 
@@ -121,7 +121,7 @@ For what reason would it be advisable for me to think about business content? Th
                                 <tr>
                                     <td><img style="width: 75px; " src="/uploads/{{this.image}}" alt="image"></td>
                                      <td width="75%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
-                                     <h5>subTotal </h5> 
+                                     <h5>SubTotal </h5> 
                                     </td>
                                     <td width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;">
                                    <h5> Rs-{{this.subTotal}}</h5> 
@@ -159,6 +159,14 @@ For what reason would it be advisable for me to think about business content? Th
                                     </td>
                                     <td width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;">
                                        {{data.discount}}
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td width="75%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;">
+                                        ShippingCost
+                                    </td>
+                                    <td width="25%" align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;">
+                                       {{data.shippingCost}}
                                     </td>
                                 </tr>
                                 <tr>
@@ -230,32 +238,7 @@ For what reason would it be advisable for me to think about business content? Th
                 </table>
                 </td>
             </tr>
-            <tr>
-                <td align="center" style="padding: 35px; background-color: #ffffff;" bgcolor="#ffffff">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
-                    <tr>
-                        <td align="center">
-                            <img src="logo-footer.png" width="37" height="37" style="display: block; border: 0px;"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 24px; padding: 5px 0 10px 0;">
-                            <p style="font-size: 14px; font-weight: 800; line-height: 18px; color: #333333;">
-                                675 Parko Avenue<br>
-                                LA, CA 02232
-                            </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;">
-                            <p style="font-size: 14px; font-weight: 400; line-height: 20px; color: #777777;">
-                                If you didn't create an account using this email address, please ignore this email or <a href="#" target="_blank" style="color: #777777;">unsusbscribe</a>.
-                            </p>
-                        </td>
-                    </tr>
-                </table>
-                </td>
-            </tr>
+           
         </table>
         </td>
     </tr>
