--- a/views/user/searchProduct.hbs
+++ b/views/user/searchProduct.hbs
@@ -70,8 +70,7 @@
         <div class="col-md-4 d-flex " >
             <div class="card align-items-center" style="width: 380px ;">
                 <div class="img-container">
-                                       <div class="d-flex justify-content-center align-items-center p-2 first"> <span class="percent">${{this.discount}} OFF</span>  </div> <img class="d-flex justify-content-center align-items-center "  src="/uploads/{{this.images.[0].img1}}" class="img-fluid">
-
+                                       <div class="d-flex justify-content-center align-items-center p-2 first"> <span class="percent">${{this.discount}} OFF</span>  </div> <a href="/productZoom/{{this.productName}}"><img class="d-flex justify-content-center align-items-center "  src="/uploads/{{this.images.[0].img1}}" class="img-fluid"></a>
                 </div>
                 <div class="product-detail-container">
                     <div class="d-flex justify-content-between align-items-center">
