--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -100,7 +100,7 @@
              
 
                 <!-- Form controls -->
-   <form  action="/addCoupon" method="post" >
+   <form  action="/admin/addCoupon" method="post" >
               <div><p style="color: red;">{{err}}</p></div>
   <div class="row mb-4">
 
@@ -201,7 +201,7 @@
 							 <td style="width: 20%;">
 							 
 								
-								<a href="/deleteCoupon/{{this.couponCode}}" onclick="return confirm('Are you sure you want to delete this item?')"  style="margin-left:20px ;"  class="table-link danger">
+								<a href="/admin/deleteCoupon/{{this.couponCode}}" onclick="return confirm('Are you sure you want to delete this item?')"  style="margin-left:20px ;"  class="table-link danger">
 									<span class="fa-stack">
 										<i class="fa fa-square fa-stack-2x"></i>
 										<i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
