--- a/views/user/productOrderForm.hbs
+++ b/views/user/productOrderForm.hbs
@@ -139,7 +139,7 @@
                 </li>
                  
             </ul>
-            <button onclick="getCoupons()" class="btn btn-success">get Free Coupons</button>
+            <button id="getCoupons" onclick="getCoupons()" class="btn btn-success">get Free Coupons</button>
             <div id="coupon">
 
             </div>
@@ -241,6 +241,5 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
  <script src="/javascripts/addToCart.js"></script>
-
 
 
